--- a/MVC/view/templates/main/base.html
+++ b/MVC/view/templates/main/base.html
@@ -15,7 +15,7 @@
   </head>
   <body>
         <nav class="navbar navbar-expand-lg navbar-dark text-white" style="background-color: #000; background-image: linear-gradient(320deg, #b2d430 0%, #000000 74%);">
-      <a class="navbar-brand" href="{% url 'main:home' %}">Sj's Movie Reviews</a>
+      <a class="navbar-brand" href="{% url 'view:home' %}">Sj's Movie Reviews</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -24,7 +24,7 @@
         <ul class="navbar-nav mr-auto">
 
          <!--  <li class="nav-item active">
-            <a class="nav-link" href="{% url 'main:home' %}">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{% url 'view:home' %}">Home <span class="sr-only">(current)</span></a>
           </li> -->
          <!--  <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
@@ -33,7 +33,7 @@
           {% if request.user.is_authenticated %}
             {% if request.user.is_superuser %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'main:add_movies' %}">Add Movies</a>
+                    <a class="nav-link" href="{% url 'view:add_movies' %}">Add Movies</a>
                 </li>
             {% endif %}
           {% endif %}
@@ -47,20 +47,20 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="{% url 'accounts:logout' %}">Logout</a>
+              <a class="dropdown-item" href="{% url 'models:logout' %}">Logout</a>
             </div>
           </li>
           {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
+            <a class="nav-link" href="{% url 'models:login' %}">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'accounts:register' %}">Register</a>
+            <a class="nav-link" href="{% url 'models:register' %}">Register</a>
           </li>
           {% endif %}
 
         </ul>
-        <form class="form-inline my-2 my-lg-0" method="GET" action="{% url 'main:home' %}">
+        <form class="form-inline my-2 my-lg-0" method="GET" action="{% url 'view:home' %}">
           {% csrf_token %}
           <input class="form-control mr-sm-2" type="search" placeholder="Search Movies" aria-label="Search" name="title" value="{{ request.GET.title }}">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
