--- a/MVC/view/templates/main/details.html
+++ b/MVC/view/templates/main/details.html
@@ -1,4 +1,4 @@
-{% extends 'main/base.html' %}
+{% extends 'view/base.html' %}
 
 
 {% block content %}
@@ -24,8 +24,8 @@
                     <br><br>
                     {% if request.user.is_authenticated %}
                         {% if request.user.is_superuser %}
-                            <a href="{% url 'main:edit_movies' movie.id %}" class="btn btn-warning">Edit Movie</a>
-                            <a href="{% url 'main:delete_movie' movie.id %}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this?');">Delete Movie</a>
+                            <a href="{% url 'view:edit_movies' movie.id %}" class="btn btn-warning">Edit Movie</a>
+                            <a href="{% url 'view:delete_movie' movie.id %}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this?');">Delete Movie</a>
                         {% endif %}
                     {% endif %}
                 </div>
@@ -36,7 +36,7 @@
         <div class="card" style="background-color: #a7d129">
             <div class="card-body" style="color: #f7f7e9; background-color: #3e3636">
                 <h3 class="text-center">Add Review</h3>
-                <form action="{% url 'main:add_review' movie.id %}" method="POST">
+                <form action="{% url 'view:add_review' movie.id %}" method="POST">
                     {% csrf_token %}
 
                     <textarea placeholder="Review" color="#fff" name="comment" id="comment" cols="30" rows="5" class="form-control" style="color: white; background-image: linear-gradient(#81a362, #403d37);"></textarea>
@@ -70,8 +70,8 @@
                                     <h5 style = "font-family:courier, courier, Times New Roman; font-weight: bold;">{{ review.rating }}</h5>
 
                                     {% if request.user == review.user %}
-                                    <a style = "border-radius: 8px;border-style:solid;border-color:#c48c23;font-family: courier, courier, Times New Roman; font-weight: bold;" href="{% url 'main:edit_review' movie.id review.id %}" class="btn btn-warning btn-sm">Edit</a>
-                                    <a style = "border-radius: 8px;border-style:solid ; border-color:#54120d ;font-family: courier, courier, Times New Roman; font-weight: bold;" href="{% url 'main:delete_review' movie.id review.id %}" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this?');">Delete</a><br>
+                                    <a style = "border-radius: 8px;border-style:solid;border-color:#c48c23;font-family: courier, courier, Times New Roman; font-weight: bold;" href="{% url 'view:edit_review' movie.id review.id %}" class="btn btn-warning btn-sm">Edit</a>
+                                    <a style = "border-radius: 8px;border-style:solid ; border-color:#54120d ;font-family: courier, courier, Times New Roman; font-weight: bold;" href="{% url 'view:delete_review' movie.id review.id %}" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this?');">Delete</a><br>
                                     {% endif %}
 
                                 </div>
